# cargo-deduplicate-warnings

./: Cargo.toml  README.md
src/: main.rs
