[package]
name = "cargo-deduplicate-warnings"
version = "0.1.0"
edition = "2021"
authors = ["Sean Lynch <sean@lynches.ca>"]
license = "MIT OR Apache-2.0"
description = "Deduplicate warning messages in the cargo json output"

[dependencies]
anyhow = "1.0.79"
cargo_metadata = "0.18.1"
clap = { version = "4.5.0", features = ["derive"] }
serde_json = "1.0"
